--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -70,8 +70,9 @@
 	
 	<servlet-mapping>    
     	<servlet-name>default</servlet-name>    
-    	<url-pattern>*.js</url-pattern>    
-    	<url-pattern>*.css</url-pattern>    
+    	<url-pattern>*.js</url-pattern>
+    	<url-pattern>*.css</url-pattern>
+    	<url-pattern>*.jpg</url-pattern>
     	<url-pattern>/assets/*"</url-pattern>    
     	<url-pattern>/images/*</url-pattern>    
 	</servlet-mapping>
